# django-algeography

./: LICENCE  README.md  pyproject.toml
algerography/: admin.py  apps.py  models.py
algerography/fixtures/: daira.json  wilaya.json
algerography/management/commands/: load_algerography.py
algerography/migrations/: 0001_initial.py
