[tool.poetry]
name = "algerography"
version = "0.2.1"
description = ""
authors = ["fathibensari <fethibensari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
